src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Accumulated_Interest__c</fullName>
        <formula>Principal__c * EXP(Interest_Rate__c * (YEAR(TODAY()) - VALUE(YearStarted)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accumulated Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_Until_Next_Tier__c</fullName>
        <formula>IF ( Total_Spending__c &lt;  $CustomMetadata.Support_Tier__mdt.Bronze.Minimum_Spending__c,
     $CustomMetadata.Support_Tier__mdt.Bronze.Minimum_Spending__c - Total_Spending__c,
     
     IF ( Total_Spending__c &lt;  $CustomMetadata.Support_Tier__mdt.Silver.Minimum_Spending__c,
          $CustomMetadata.Support_Tier__mdt.Silver.Minimum_Spending__c - Total_Spending__c,
          IF ( Total_Spending__c &lt;  $CustomMetadata.Support_Tier__mdt.Gold.Minimum_Spending__c,
               $CustomMetadata.Support_Tier__mdt.Gold.Minimum_Spending__c - Total_Spending__c,
               0
          )
     )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Until Next Tier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Account Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Industry,&quot;&quot;),&quot;Industry, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(BillingCity) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Type,&quot;&quot;), &quot;Type&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Industry,&quot;&quot;), 0,20) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,20) + IF( LEN(BillingCity) = 0, 0,20) + IF(LEN(Phone) = 0, 0,20) + IF( ISPICKVAL(Type,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Support_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sales users use this field to indicate to Support which customers have support plans.</description>
        <inlineHelpText>Does this customer have a current support plan? Check this box when you sell a support plan to this customer.</inlineHelpText>
        <label>Has Support Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <formula>if( Principal__c &lt;10000, 0.02,
   IF(Principal__c &gt;= 10000 &amp;&amp;
    Principal__c &lt; 100000, 0.03, 0.04))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_Value__c</fullName>
        <label>Potential Value</label>
        <summarizedField>Opportunity.ExpectedRevenue</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prequalified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prequalified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Principal__c</fullName>
        <label>Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Customer’s geographical region—for sales operations use only.</description>
        <inlineHelpText>In which region is the customer based?</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sum_of_Opportunities__c</fullName>
        <label>Sum of Opportunities</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Support_Plan_Expiration_Date__c</fullName>
        <description>Expiration date of current support plan</description>
        <inlineHelpText>When is the current support plan due for renewal?</inlineHelpText>
        <label>Support Plan Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Support_Tier__c</fullName>
        <defaultValue>$CustomMetadata.Support_Tier__mdt.Bronze.MasterLabel</defaultValue>
        <label>Support Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Spending__c</fullName>
        <label>Total Spending</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <description>Customer’s zone within the selected region—for sales operations use only.</description>
        <inlineHelpText>In which zone is this customer based? Depends on region.</inlineHelpText>
        <label>Zone</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>East Asia</fullName>
                </value>
                <value>
                    <fullName>Oceania</fullName>
                </value>
                <value>
                    <fullName>Southeast Asia</fullName>
                </value>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>UK + Ireland</fullName>
                </value>
                <value>
                    <fullName>Caribbean</fullName>
                </value>
                <value>
                    <fullName>Central America</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
                <value>
                    <fullName>Midwest US</fullName>
                </value>
                <value>
                    <fullName>Northeast US</fullName>
                </value>
                <value>
                    <fullName>Southeast US</fullName>
                </value>
                <value>
                    <fullName>Southwest US</fullName>
                </value>
                <value>
                    <fullName>West US</fullName>
                </value>
                <value>
                    <fullName>Northern Canada</fullName>
                </value>
                <value>
                    <fullName>Mountains and the West</fullName>
                </value>
                <value>
                    <fullName>The Prairies</fullName>
                </value>
                <value>
                    <fullName>Central Canada</fullName>
                </value>
                <value>
                    <fullName>East Coast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Channel_Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>CustomerPriority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Customer - Channel</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS1_STATE</field>
            <operation>equals</operation>
            <value>WA,OR,CA</value>
        </filters>
        <label>Channel Customers</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>Customer_Account</fullName>
        <active>true</active>
        <description>For customers and prospects</description>
        <label>Customer Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Account</fullName>
        <active>true</active>
        <description>For consulting partners</description>
        <label>Partner Account</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Account_Number_is_numeric</fullName>
        <active>true</active>
        <description>Validates that the Account Number is numeric if not blank.</description>
        <errorConditionFormula>AND(ISBLANK( AccountNumber ),  ISNUMBER( AccountNumber )  )</errorConditionFormula>
        <errorMessage>Account Number is not numeric.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Minimum_Spending_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF( 
 (ISPICKVAL( Support_Tier__c , &quot;Silver&quot;) 
      &amp;&amp; 
   ( Total_Spending__c &lt;  
   $CustomMetadata.Support_Tier__mdt.Silver.Minimum_Spending__c 
   )
 ) 
      || 
 (ISPICKVAL( Support_Tier__c , &quot;Gold&quot;) 
      &amp;&amp; 
   ( Total_Spending__c &lt;  
   $CustomMetadata.Support_Tier__mdt.Gold.Minimum_Spending__c 
   )
 ), TRUE, FALSE
)</errorConditionFormula>
        <errorMessage>Dollar value too low for this support tier</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Revenue_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
(AnnualRevenue/20 &lt; $CustomMetadata.Support_Tier__mdt.Gold.Minimum_Spending__c ), TRUE, FALSE
)</errorConditionFormula>
        <errorMessage>Annual Revenue is less than 20 minimum spending amount of the Gold Support Tier.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Support_plan_expiration_date_required</fullName>
        <active>true</active>
        <description>Support plan expiration date is required when account is marked as having support plan.</description>
        <errorConditionFormula>Has_Support_Plan__c = True &amp;&amp; ISBLANK(Support_Plan_Expiration_Date__c)</errorConditionFormula>
        <errorDisplayField>Support_Plan_Expiration_Date__c</errorDisplayField>
        <errorMessage>You must enter an expiration date when an account has a support plan.</errorMessage>
    </validationRules>
</CustomObject>